--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   </head>
   <body>
     <section id="container">
+      <div id="deckcard">
+        <img id="deck" src="Images/Cards/cardback.svg" />
+      </div>
       <div id="logo">
-        <img src="Images/Table/500mark.svg" />
-        <img src="Images/Table/500mark.svg" />
-        <img src="Images/Table/500mark.svg" />
+        <img id="card" />
       </div>
     </section>
   </body>
